--- a/VisionRT Cube Notebook.ipynb
+++ b/VisionRT Cube Notebook.ipynb
@@ -386,25 +386,28 @@
     "tf_in_cube = is_in_cube_np(*image_xyz, True)\n",
     "\n",
     "pixel_map[tf_in_cube] = cube_HU\n",
-    "pixel_map[tf_in_sphere] = sphere_HU"
+    "pixel_map[tf_in_sphere] = sphere_HU\n",
+    "\n",
+    "# Correct map to account for -1000 intercept in DICOM file\n",
+    "pixel_map += 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [07:06<00:00,  4.26s/it]\n"
+      " 49%|████▉     | 98/200 [06:44<06:49,  4.02s/it]"
      ]
     }
    ],
    "source": [
     "# Create 3D data matrix with mottling\n",
-    "num_samples = 100\n",
+    "num_samples = 200\n",
     "image_dims = (image_matrix_size, image_matrix_size, number_of_slices)\n",
     "pixel_map = np.zeros(image_dims)\n",
     "\n",
@@ -432,23 +435,17 @@
     "\n",
     "    pixel_map += this_pixel_map\n",
     "\n",
-    "pixel_map /= num_samples"
+    "pixel_map /= num_samples\n",
+    "\n",
+    "# Correct map to account for -1000 intercept in DICOM file\n",
+    "pixel_map += 1000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file count: 258\n",
-      "skipped, no SliceLocation: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_dir = Path(\"output/\")\n",
     "\n",
@@ -478,42 +475,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.78125"
+       "Dataset.file_meta -------------------------------\n",
+       "(0002, 0000) File Meta Information Group Length  UL: 194\n",
+       "(0002, 0001) File Meta Information Version       OB: b'\\x00\\x01'\n",
+       "(0002, 0002) Media Storage SOP Class UID         UI: CT Image Storage\n",
+       "(0002, 0003) Media Storage SOP Instance UID      UI: 1.3.6.1.4.1.9590.100.1.2.185304565804072502428575659122913247779\n",
+       "(0002, 0010) Transfer Syntax UID                 UI: Implicit VR Little Endian\n",
+       "(0002, 0012) Implementation Class UID            UI: 1.2.246.352.70.2.1.160.3\n",
+       "(0002, 0013) Implementation Version Name         SH: 'DCIE 2.2'\n",
+       "-------------------------------------------------\n",
+       "(0008, 0005) Specific Character Set              CS: 'ISO_IR 192'\n",
+       "(0008, 0008) Image Type                          CS: ['ORIGINAL', 'PRIMARY', 'AXIAL']\n",
+       "(0008, 0012) Instance Creation Date              DA: '20210123'\n",
+       "(0008, 0013) Instance Creation Time              TM: '210928'\n",
+       "(0008, 0016) SOP Class UID                       UI: CT Image Storage\n",
+       "(0008, 0018) SOP Instance UID                    UI: 1.3.6.1.4.1.9590.100.1.2.185304565804072502428575659122913247779\n",
+       "(0008, 0020) Study Date                          DA: '20210123'\n",
+       "(0008, 0021) Series Date                         DA: '20210123'\n",
+       "(0008, 0023) Content Date                        DA: '20210123'\n",
+       "(0008, 0030) Study Time                          TM: '210928'\n",
+       "(0008, 0031) Series Time                         TM: '210928'\n",
+       "(0008, 0033) Content Time                        TM: '210928'\n",
+       "(0008, 0050) Accession Number                    SH: ''\n",
+       "(0008, 0060) Modality                            CS: 'CT'\n",
+       "(0008, 0070) Manufacturer                        LO: 'SIEMENS'\n",
+       "(0008, 0080) Institution Name                    LO: 'UWHC'\n",
+       "(0008, 0090) Referring Physician's Name          PN: ''\n",
+       "(0008, 1010) Station Name                        SH: 'CTAWP83266'\n",
+       "(0008, 1030) Study Description                   LO: 'Virtual AlignRT Cube'\n",
+       "(0008, 103e) Series Description                  LO: 'Matrix size: 256, Image size: 200 mm'\n",
+       "(0008, 1070) Operators' Name                     PN: 'djj379'\n",
+       "(0008, 1090) Manufacturer's Model Name           LO: 'SOMATOM Definition Edge'\n",
+       "(0010, 0010) Patient's Name                      PN: 'ZZUWQA^AlignRTCube'\n",
+       "(0010, 0020) Patient ID                          LO: '20210101DJJ'\n",
+       "(0010, 0030) Patient's Birth Date                DA: '20210123'\n",
+       "(0010, 0032) Patient's Birth Time                TM: '210928'\n",
+       "(0010, 0040) Patient's Sex                       CS: ''\n",
+       "(0018, 0050) Slice Thickness                     DS: \"0.78125\"\n",
+       "(0018, 0060) KVP                                 DS: \"120.0\"\n",
+       "(0018, 0090) Data Collection Diameter            DS: \"500.0\"\n",
+       "(0018, 1100) Reconstruction Diameter             DS: \"73.0\"\n",
+       "(0018, 1110) Distance Source to Detector         DS: \"1085.59997558593\"\n",
+       "(0018, 1111) Distance Source to Patient          DS: \"595.0\"\n",
+       "(0018, 1120) Gantry/Detector Tilt                DS: \"0.0\"\n",
+       "(0018, 1130) Table Height                        DS: \"157.5\"\n",
+       "(0018, 1150) Exposure Time                       IS: \"1000\"\n",
+       "(0018, 1151) X-Ray Tube Current                  IS: \"425\"\n",
+       "(0018, 1152) Exposure                            IS: \"425\"\n",
+       "(0018, 1170) Generator Power                     IS: \"51\"\n",
+       "(0018, 1190) Focal Spot(s)                       DS: \"1.20000004768371\"\n",
+       "(0018, 1210) Convolution Kernel                  SH: 'H30s'\n",
+       "(0018, 5100) Patient Position                    CS: 'HFS'\n",
+       "(0020, 000d) Study Instance UID                  UI: 1.3.6.1.4.1.9590.100.1.2.27470788236264419824184503951405751137\n",
+       "(0020, 000e) Series Instance UID                 UI: 1.3.6.1.4.1.9590.100.1.2.208559346010885851721678246080195576818\n",
+       "(0020, 0010) Study ID                            SH: '3'\n",
+       "(0020, 0011) Series Number                       IS: \"2\"\n",
+       "(0020, 0012) Acquisition Number                  IS: \"1\"\n",
+       "(0020, 0013) Instance Number                     IS: \"1\"\n",
+       "(0020, 0030) Image Position                      DS: [-99.609375, -99.609375, -98.828125]\n",
+       "(0020, 0032) Image Position (Patient)            DS: [-25.5, -25.5, 11.9]\n",
+       "(0020, 0037) Image Orientation (Patient)         DS: [1, 0, 0, 0, 1, 0]\n",
+       "(0020, 0052) Frame of Reference UID              UI: 1.3.6.1.4.1.9590.100.1.2.250650301640513614528263570671221772892\n",
+       "(0020, 1040) Position Reference Indicator        LO: ''\n",
+       "(0020, 1041) Slice Location                      DS: \"-98.828125\"\n",
+       "(0028, 0002) Samples per Pixel                   US: 1\n",
+       "(0028, 0004) Photometric Interpretation          CS: 'MONOCHROME2'\n",
+       "(0028, 0010) Rows                                US: 256\n",
+       "(0028, 0011) Columns                             US: 256\n",
+       "(0028, 0030) Pixel Spacing                       DS: [0.78125, 0.78125]\n",
+       "(0028, 0100) Bits Allocated                      US: 16\n",
+       "(0028, 0101) Bits Stored                         US: 16\n",
+       "(0028, 0102) High Bit                            US: 15\n",
+       "(0028, 0103) Pixel Representation                US: 1\n",
+       "(0028, 1050) Window Center                       DS: \"-362.0\"\n",
+       "(0028, 1051) Window Width                        DS: \"1324.0\"\n",
+       "(0028, 1052) Rescale Intercept                   DS: \"-1000.0\"\n",
+       "(0028, 1053) Rescale Slope                       DS: \"1.0\"\n",
+       "(7fe0, 0010) Pixel Data                          OW: Array of 131072 elements"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image_pixel_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.10384544329365228"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_pixel_size*(np.random.rand()-0.5)"
+    "slices[1]"
    ]
   },
   {
